--- a/styles.css
+++ b/styles.css
@@ -22,8 +22,6 @@ body {
   background-color: #ffbff1;
 }
 
-
-
 video {
   position: fixed;
   top: 0;
@@ -32,6 +30,7 @@ video {
   height: 100%;
   z-index: -1;
   filter: hue-rotate(-812deg);
+  box-shadow: inset 0 0 20px black;
 }
 
 
