--- a/styles.css
+++ b/styles.css
@@ -37,6 +37,7 @@ video {
 
 /* Styling start screen */
 .start-screen {
+  padding: 20px;
   display: grid;
   grid-template-columns: 1fr 10fr 1fr;
   grid-template-rows: 1fr 5fr 2fr 4fr 1fr;
@@ -49,7 +50,7 @@ header {
   align-self: center;
   text-align: center;
   font-family: 'Nosifer', cursive;
-  font-size: 2.2em;
+  font-size: 2.1em;
   text-shadow: 0 0 15px black;
   color: #a70000;
 }
@@ -101,7 +102,7 @@ header {
   display: none;
   grid-template-columns: 1fr;
   grid-template-rows: 1fr 6fr 2fr;
-  padding: 10px;
+  padding: 40px 20px;
   height: 100vh;
 }
 
